--- a/minibot_bringup/package.xml
+++ b/minibot_bringup/package.xml
@@ -13,6 +13,11 @@
   <depend>minibot_description</depend>
   <depend>ros2_control</depend>
   <depend>ros2_controllers</depend>
+  
+  <depend>geometry_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>serial</depend>
+  <depend>tf_transformations</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
