--- a/minibot_navigation2/params/nav2_params.yaml
+++ b/minibot_navigation2/params/nav2_params.yaml
@@ -47,7 +47,7 @@ bt_navigator:
     use_sim_time: True
     global_frame: map
     robot_base_frame: base_footprint
-    odom_topic: base_controller/odom
+    odom_topic: odom
     bt_loop_duration: 10
     default_server_timeout: 20
     # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
@@ -348,7 +348,7 @@ velocity_smoother:
     min_velocity: [-1.0, 0.0, -1.8]
     max_accel: [1.8, 0.0, 2.0]
     max_decel: [-1.8, 0.0, -2.0]
-    odom_topic: "base_controller/odom"
+    odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
     velocity_timeout: 1.0
