--- a/minibot_navigation2/params/nav2_params.yaml
+++ b/minibot_navigation2/params/nav2_params.yaml
@@ -50,6 +50,7 @@ bt_navigator:
     odom_topic: odom
     bt_loop_duration: 10
     default_server_timeout: 20
+    default_nav_to_pose_bt_xml: "/home/mkh/minibot2/src/pinklab_minibot_robot/minibot_navigation2/params/new_nav_to_pose.xml"
     # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
     # nav2_bt_navigator/navigate_to_pose_w_replanning_and_recovery.xml
     # nav2_bt_navigator/navigate_through_poses_w_replanning_and_recovery.xml
@@ -142,7 +143,7 @@ controller_server:
       max_vel_y: 0.0
       max_vel_theta: 1.5
       min_speed_xy: 0.0
-      max_speed_xy: 0.5
+      max_speed_xy: 0.7
       min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/7
@@ -189,7 +190,12 @@ local_costmap:
       resolution: 0.05
       # robot_radius: 0.325
       footprint: '[[0.05, 0.12], [0.05, -0.12], [-0.14, -0.12], [-0.14, 0.12]]'
-      plugins: ["voxel_layer", "inflation_layer"]
+      plugins: ["voxel_layer", "inflation_layer", denoise_layer]
+      denoise_layer:
+        plugin: "nav2_costmap_2d::DenoiseLayer"
+        enabled: true
+        minimal_group_size: 50
+        group_connectivity_type: 4
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
