--- a/minibot_navigation2/params/nav2_params.yaml
+++ b/minibot_navigation2/params/nav2_params.yaml
@@ -50,11 +50,7 @@ bt_navigator:
     odom_topic: odom
     bt_loop_duration: 10
     default_server_timeout: 20
-    default_nav_to_pose_bt_xml: "/home/mkh/minibot2/src/pinklab_minibot_robot/minibot_navigation2/params/new_nav_to_pose.xml"
-    # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
-    # nav2_bt_navigator/navigate_to_pose_w_replanning_and_recovery.xml
-    # nav2_bt_navigator/navigate_through_poses_w_replanning_and_recovery.xml
-    # They can be set here or via a RewrittenYaml remap from a parent launch file to Nav2.
+    #default_nav_to_pose_bt_xml: "/home/mkh/minibot2/src/pinklab_minibot_robot/minibot_navigation2/params/new_nav_to_pose.xml"
     plugin_lib_names:
     - nav2_compute_path_to_pose_action_bt_node
     - nav2_compute_path_through_poses_action_bt_node
