--- a/minibot_navigation2/params/nav2_params.yaml
+++ b/minibot_navigation2/params/nav2_params.yaml
@@ -38,8 +38,8 @@ amcl:
     z_rand: 0.5
     z_short: 0.05
     scan_topic: scan
-    set_initial_pose: true
-    initial_pose: [0, 0, 0]
+    set_initial_pose: true  
+    initial_pose: {x: 0.0, y: 0.0, z: 0.0, yaw: 0.0}
 
 
 bt_navigator:
